Global options checked

--- a/wp-content/themes/bootstrap5/src/scss/global-options/07-button-pointers.scss
+++ b/wp-content/themes/bootstrap5/src/scss/global-options/07-button-pointers.scss
@@ -1,6 +1,7 @@
 // Add “hand” cursor to non-disabled button elements.
+
 // Hand cursor is default even without Bootstrap
-// How to disable kadence-global-css 
+// How to disable kadence-global-css? 
 
 $enable-button-pointers: false;
 
