--- a/wp-content/themes/bootstrap5/src/scss/global-options/10-important-utilities.scss
+++ b/wp-content/themes/bootstrap5/src/scss/global-options/10-important-utilities.scss
@@ -1,5 +1,7 @@
 // Enables the !important suffix in utility classes.
+
 // Can not disable important utilities
+
 $enable-important-utilities: false;
 
-@import "../../../default/bootstrap/scss/bootstrap";
+// @import "../../../default/bootstrap/scss/bootstrap";
