95. Colors: Colors overview complete

--- a/wp-content/themes/bootstrap5/src/scss/components/breadcrumb.scss
+++ b/wp-content/themes/bootstrap5/src/scss/components/breadcrumb.scss
@@ -1,4 +1,4 @@
 // Specify the breadcrumb divider
 $breadcrumb-divider: quote(">");
 
-@import "../../bootstrap/scss/bootstrap";
+@import "../../../default/bootstrap/scss/bootstrap";
