--- a/wp-content/themes/bootstrap5/src/scss/forms/range.scss
+++ b/wp-content/themes/bootstrap5/src/scss/forms/range.scss
@@ -3,4 +3,4 @@ $form-range-track-height: 1rem;
 $form-range-thumb-width: 2rem;
 $form-range-thumb-border-radius: 2rem;
 
-@import "../../bootstrap/scss/bootstrap";
+@import "../../../default/bootstrap/scss/bootstrap";
