--- a/wp-content/themes/bootstrap5/src/scss/layout/breakpoints.scss
+++ b/wp-content/themes/bootstrap5/src/scss/layout/breakpoints.scss
@@ -8,4 +8,4 @@ $grid-breakpoints: (
   xxl: 1500px
 );
 
-@import "../../bootstrap/scss/bootstrap";
+@import "../../../default/bootstrap/scss/bootstrap";
