--- a/wp-content/themes/bootstrap5/src/scss/layout/container.scss
+++ b/wp-content/themes/bootstrap5/src/scss/layout/container.scss
@@ -7,4 +7,4 @@ $container-max-widths: (
   xxl: 1100px
 );
 
-@import "../../bootstrap/scss/bootstrap";
+@import "../../../default/bootstrap/scss/bootstrap";
