--- a/wp-content/themes/bootstrap5/src/scss/all.scss
+++ b/wp-content/themes/bootstrap5/src/scss/all.scss
@@ -9,3 +9,7 @@
 @import "./global-options/08-validation-icons.scss";
 @import "./global-options/09-negative-margins.scss";
 @import "./global-options/10-important-utilities.scss";
+
+// Colors
+@import "./colors/01-colors-overview.scss";
+// @import "./colors/02-add-to-theme-colors.scss";
