--- a/wp-content/themes/bootstrap5/src/scss/colors/03-remove-from-theme-colors.scss
+++ b/wp-content/themes/bootstrap5/src/scss/colors/03-remove-from-theme-colors.scss
@@ -1,45 +1,45 @@
 // Configuration
-@import "../../bootstrap/scss/functions";
-@import "../../bootstrap/scss/variables";
-@import "../../bootstrap/scss/mixins";
+@import "../../../default/bootstrap/scss/functions";
+@import "../../../default/bootstrap/scss/variables";
+@import "../../../default/bootstrap/scss/mixins";
 
 // Remove from "$theme-colors" map
 $theme-colors: map-remove($theme-colors, "info", "light", "dark");
 
 // Layout & components
-@import "../../bootstrap/scss/root";
-@import "../../bootstrap/scss/reboot";
-@import "../../bootstrap/scss/type";
-@import "../../bootstrap/scss/images";
-@import "../../bootstrap/scss/containers";
-@import "../../bootstrap/scss/grid";
-@import "../../bootstrap/scss/tables";
-@import "../../bootstrap/scss/forms";
-@import "../../bootstrap/scss/buttons";
-@import "../../bootstrap/scss/transitions";
-@import "../../bootstrap/scss/dropdown";
-@import "../../bootstrap/scss/button-group";
-@import "../../bootstrap/scss/nav";
-@import "../../bootstrap/scss/navbar";
-@import "../../bootstrap/scss/card";
-@import "../../bootstrap/scss/accordion";
-@import "../../bootstrap/scss/breadcrumb";
-@import "../../bootstrap/scss/pagination";
-@import "../../bootstrap/scss/badge";
-@import "../../bootstrap/scss/alert";
-@import "../../bootstrap/scss/progress";
-@import "../../bootstrap/scss/list-group";
-@import "../../bootstrap/scss/close";
-@import "../../bootstrap/scss/toasts";
-@import "../../bootstrap/scss/modal";
-@import "../../bootstrap/scss/tooltip";
-@import "../../bootstrap/scss/popover";
-@import "../../bootstrap/scss/carousel";
-@import "../../bootstrap/scss/spinners";
+@import "../../../default/bootstrap/scss/root";
+@import "../../../default/bootstrap/scss/reboot";
+@import "../../../default/bootstrap/scss/type";
+@import "../../../default/bootstrap/scss/images";
+@import "../../../default/bootstrap/scss/containers";
+@import "../../../default/bootstrap/scss/grid";
+@import "../../../default/bootstrap/scss/tables";
+@import "../../../default/bootstrap/scss/forms";
+@import "../../../default/bootstrap/scss/buttons";
+@import "../../../default/bootstrap/scss/transitions";
+@import "../../../default/bootstrap/scss/dropdown";
+@import "../../../default/bootstrap/scss/button-group";
+@import "../../../default/bootstrap/scss/nav";
+@import "../../../default/bootstrap/scss/navbar";
+@import "../../../default/bootstrap/scss/card";
+@import "../../../default/bootstrap/scss/accordion";
+@import "../../../default/bootstrap/scss/breadcrumb";
+@import "../../../default/bootstrap/scss/pagination";
+@import "../../../default/bootstrap/scss/badge";
+@import "../../../default/bootstrap/scss/alert";
+@import "../../../default/bootstrap/scss/progress";
+@import "../../../default/bootstrap/scss/list-group";
+@import "../../../default/bootstrap/scss/close";
+@import "../../../default/bootstrap/scss/toasts";
+@import "../../../default/bootstrap/scss/modal";
+@import "../../../default/bootstrap/scss/tooltip";
+@import "../../../default/bootstrap/scss/popover";
+@import "../../../default/bootstrap/scss/carousel";
+@import "../../../default/bootstrap/scss/spinners";
 
 // Helpers
-@import "../../bootstrap/scss/helpers";
+@import "../../../default/bootstrap/scss/helpers";
 
 // Utilities
-@import "../../bootstrap/scss/utilities";
-@import "../../bootstrap/scss/utilities/api";
+@import "../../../default/bootstrap/scss/utilities";
+@import "../../../default/bootstrap/scss/utilities/api";
