--- a/wp-content/themes/bootstrap5/src/scss/components/card.scss
+++ b/wp-content/themes/bootstrap5/src/scss/components/card.scss
@@ -1,4 +1,4 @@
 // Make cards have equal height by default
 $card-height: 100%;
 
-@import "../../bootstrap/scss/bootstrap";
+@import "../../../default/bootstrap/scss/bootstrap";
