--- a/wp-content/themes/bootstrap5/src/scss/components/carousel.scss
+++ b/wp-content/themes/bootstrap5/src/scss/components/carousel.scss
@@ -1,4 +1,4 @@
 // Specify the carousel transition duration
 $carousel-transition-duration: 1s;
 
-@import "../../bootstrap/scss/bootstrap";
+@import "../../../default/bootstrap/scss/bootstrap";
