--- a/wp-content/themes/bootstrap5/src/scss/components/modal.scss
+++ b/wp-content/themes/bootstrap5/src/scss/components/modal.scss
@@ -4,4 +4,4 @@ $modal-fade-transform: scale(.25);
 // Specify max width for the extra large modal
 $modal-xl: calc(100% - 1rem);
 
-@import "../../bootstrap/scss/bootstrap";
+@import "../../../default/bootstrap/scss/bootstrap";
