--- a/wp-content/themes/bootstrap5/src/scss/components/spinners.scss
+++ b/wp-content/themes/bootstrap5/src/scss/components/spinners.scss
@@ -1,4 +1,4 @@
 // Specify the spinner animation speed
 $spinner-animation-speed: 1.5s;
 
-@import "../../bootstrap/scss/bootstrap";
+@import "../../../default/bootstrap/scss/bootstrap";
