--- a/wp-content/themes/bootstrap5/src/scss/layout/grid.scss
+++ b/wp-content/themes/bootstrap5/src/scss/layout/grid.scss
@@ -2,4 +2,4 @@
 $grid-columns: 16;
 $grid-gutter-width: 1rem;
 
-@import "../../bootstrap/scss/bootstrap";
+@import "../../../default/bootstrap/scss/bootstrap";
