96. Colors: Add to theme colors complete

--- a/wp-content/themes/bootstrap5/src/scss/all.scss
+++ b/wp-content/themes/bootstrap5/src/scss/all.scss
@@ -12,4 +12,4 @@
 
 // Colors
 @import "./colors/01-colors-overview.scss";
-// @import "./colors/02-add-to-theme-colors.scss";
+@import "./colors/02-add-to-theme-colors.scss";
