--- a/wp-content/themes/bootstrap5/src/scss/all.scss
+++ b/wp-content/themes/bootstrap5/src/scss/all.scss
@@ -11,5 +11,7 @@
 @import "./global-options/10-important-utilities.scss";
 
 // Colors
-@import "./colors/01-colors-overview.scss";
-@import "./colors/02-add-to-theme-colors.scss";
+// @import "./colors/01-colors-overview.scss";
+// @import "./colors/02-add-to-theme-colors.scss";
+// @import "./colors/03-remove-from-theme-colors.scss";
+@import "./colors/04-defining-color-palette.scss";
