--- a/wp-content/themes/bootstrap5/src/scss/all.scss
+++ b/wp-content/themes/bootstrap5/src/scss/all.scss
@@ -14,4 +14,9 @@
 // @import "./colors/01-colors-overview.scss";
 // @import "./colors/02-add-to-theme-colors.scss";
 // @import "./colors/03-remove-from-theme-colors.scss";
-@import "./colors/04-defining-color-palette.scss";
+// @import "./colors/04-defining-color-palette.scss";
+
+// Layout
+// @import "./layout/breakpoints.scss";
+// @import "./layout/container.scss";
+@import "./layout/grid.scss";
