105. Content Typography complete

--- a/wp-content/themes/bootstrap5/src/scss/all.scss
+++ b/wp-content/themes/bootstrap5/src/scss/all.scss
@@ -19,4 +19,10 @@
 // Layout
 // @import "./layout/breakpoints.scss";
 // @import "./layout/container.scss";
-@import "./layout/grid.scss";
+// @import "./layout/grid.scss";
+
+// Content
+// @import "./content/figures.scss";
+// @import "./content/images.scss";
+// @import "./content/tables.scss";
+@import "./content/typography.scss";
