--- a/wp-content/themes/bootstrap5/src/scss/all.scss
+++ b/wp-content/themes/bootstrap5/src/scss/all.scss
@@ -25,4 +25,4 @@
 // @import "./content/figures.scss";
 // @import "./content/images.scss";
 // @import "./content/tables.scss";
-@import "./content/typography.scss";
+// @import "./content/typography.scss";
