107. Components: Breadcrumb complete

--- a/wp-content/themes/kadence/assets/css/src/woo/_blocks.scss
+++ b/wp-content/themes/kadence/assets/css/src/woo/_blocks.scss
@@ -436,3 +436,6 @@ li.product a .secondary-product-image, .wc-block-grid__product a .secondary-prod
 		top: 0;
 	}
 }
+.wc-block-grid .wc-block-grid__product .entry-content-wrap {
+    font-size: 1rem;
+}
