--- a/wp-content/themes/bootstrap5/src/scss/all.scss
+++ b/wp-content/themes/bootstrap5/src/scss/all.scss
@@ -1,28 +1,34 @@
-// Global Options
-@import "./global-options/01-spacer.scss";
-@import "./global-options/02-border-radius.scss";
-@import "./global-options/03-box-shadow.scss";
-@import "./global-options/04-gradients.scss";
-@import "./global-options/05-transitions.scss";
-@import "./global-options/06-caret.scss";
-@import "./global-options/07-button-pointers.scss";
-@import "./global-options/08-validation-icons.scss";
-@import "./global-options/09-negative-margins.scss";
-@import "./global-options/10-important-utilities.scss";
-
 // Colors
 // @import "./colors/01-colors-overview.scss";
 // @import "./colors/02-add-to-theme-colors.scss";
 // @import "./colors/03-remove-from-theme-colors.scss";
 // @import "./colors/04-defining-color-palette.scss";
 
-// Layout
-// @import "./layout/breakpoints.scss";
-// @import "./layout/container.scss";
-// @import "./layout/grid.scss";
+// Components
+// @import "./components/breadcrumb.scss";
 
 // Content
 // @import "./content/figures.scss";
 // @import "./content/images.scss";
 // @import "./content/tables.scss";
 // @import "./content/typography.scss";
+
+// Global Options
+// @import "./global-options/01-spacer.scss";
+// @import "./global-options/02-border-radius.scss";
+// @import "./global-options/03-box-shadow.scss";
+// @import "./global-options/04-gradients.scss";
+// @import "./global-options/05-transitions.scss";
+// @import "./global-options/06-caret.scss";
+// @import "./global-options/07-button-pointers.scss";
+// @import "./global-options/08-validation-icons.scss";
+// @import "./global-options/09-negative-margins.scss";
+// @import "./global-options/10-important-utilities.scss";
+
+// Layout
+// @import "./layout/breakpoints.scss";
+// @import "./layout/container.scss";
+// @import "./layout/grid.scss";
+
+// Forms
+// @import "./forms/range.scss";
