--- a/wp-content/themes/kadence/assets/css/src/_nav.scss
+++ b/wp-content/themes/kadence/assets/css/src/_nav.scss
@@ -274,6 +274,7 @@
 .header-navigation ul ul ul.sub-menu, .header-navigation ul ul ul.submenu {
 	top: 0;
 	left: 100%;
+	right:auto;
 	min-height: 100%;
 }
 .header-navigation .menu {
