--- a/wp-content/themes/kadence/assets/css/src/woocommerce.scss
+++ b/wp-content/themes/kadence/assets/css/src/woocommerce.scss
@@ -36,6 +36,7 @@
     padding: 0;
     border:0;
     box-shadow: none;
+	font-size: 1rem;
     &:hover {
         background: transparent;
         color: inherit;
