112. Components: Spinners complete

--- a/wp-content/themes/bootstrap5/src/scss/components/progress.scss
+++ b/wp-content/themes/bootstrap5/src/scss/components/progress.scss
@@ -1,4 +1,4 @@
 // Specify the progress animation timing
-$progress-bar-animation-timing: .5s linear infinite;
+$progress-bar-animation-timing: 0.5s linear infinite;
 
 @import "../../../default/bootstrap/scss/bootstrap";
