--- a/wp-content/themes/bootstrap5/src/scss/all.scss
+++ b/wp-content/themes/bootstrap5/src/scss/all.scss
@@ -6,6 +6,11 @@
 
 // Components
 // @import "./components/breadcrumb.scss";
+// @import "./components/card.scss";
+// @import "./components/carousel.scss";
+// @import "./components/modal.scss";
+// @import "./components/progress.scss";
+// @import "./components/spinners.scss";
 
 // Content
 // @import "./content/figures.scss";
