118. Utility API complete

--- a/wp-content/themes/bootstrap5/src/scss/all.scss
+++ b/wp-content/themes/bootstrap5/src/scss/all.scss
@@ -43,4 +43,7 @@
 
 // Utilities
 // @import "./utilities/borders.scss";
-@import "./utilities/position.scss";
+// @import "./utilities/position.scss";
+// @import "./utilities/sizing.scss";
+// @import "./utilities/spacing.scss";
+@import "./utilities/utility-api.scss";
