129: Downloading and installing Font Awesome complete

--- a/wp-content/themes/bootstrap5/src/scss/all.scss
+++ b/wp-content/themes/bootstrap5/src/scss/all.scss
@@ -46,4 +46,4 @@
 // @import "./utilities/position.scss";
 // @import "./utilities/sizing.scss";
 // @import "./utilities/spacing.scss";
-@import "./utilities/utility-api.scss";
+// @import "./utilities/utility-api.scss";
