--- a/wp-content/themes/bootstrap5/style.css
+++ b/wp-content/themes/bootstrap5/style.css
@@ -7,8 +7,6 @@ Template: kadence
 Version: 1.0
 */
 
-@font-face {
-	font-family: "bootstrap-icons";
-	src: url("./vendor/bootstrap/fonts/bootstrap-icons.woff") format("woff");
-	src: url("./vendor/bootstrap/fonts/bootstrap-icons.woff2") format("woff2");
+.nav-item.active {
+	background-color: orange;
 }
