153. Contact Info complete.

--- a/wp-content/themes/bootstrap5/style.css
+++ b/wp-content/themes/bootstrap5/style.css
@@ -10,3 +10,13 @@ Version: 1.0
 .nav-item.active {
 	background-color: orange;
 }
+
+#fas-fa-item {
+	left: 25%;
+	top: 18%;
+}
+
+#fas-fa-calendar-alt {
+	left: 25%;
+	top: 18%;
+}
