169. Category - Smooth Scroll complete

--- a/wp-content/themes/bootstrap5/css/default.scss
+++ b/wp-content/themes/bootstrap5/css/default.scss
@@ -1,2 +1,2 @@
-// Import the default Bootstrap 5 styles
+// Import the default Bootstrap 5 styles - testing
 @import "../bootstrap/scss/bootstrap";
